[gd_scene load_steps=46 format=3 uid="uid://wrjp4p2wf8pu"]

[ext_resource type="Script" path="res://extras/RPG Demo/RPGPlayer.gd" id="1_xuju6"]
[ext_resource type="Texture2D" uid="uid://cfi45skadk72y" path="res://extras/RPG Demo/playerrpg.png" id="2_bcgte"]
[ext_resource type="Texture2D" uid="uid://dgn8773wx6n7m" path="res://extras/RPG Demo/slash.png" id="3_2j0km"]
[ext_resource type="Texture2D" uid="uid://b8hrjajhvlde6" path="res://extras/RPG Demo/dialoguebox.png" id="4_51g28"]
[ext_resource type="FontFile" uid="uid://dqg2tm56144e7" path="res://extras/RPG Demo/Peepo.ttf" id="5_yirej"]
[ext_resource type="AudioStream" uid="uid://lk8e5wmeyi11" path="res://audio/jump.wav" id="6_0if83"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjk8r"]
size = Vector2(16, 7)

[sub_resource type="Animation" id="Animation_8blii"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot/Slash:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6ugtd"]
resource_name = "attack_down"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackPivot/Slash:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ndwr5"]
resource_name = "attack_left"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackPivot/Slash:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ukxeu"]
resource_name = "attack_right"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4.71239]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackPivot/Slash:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_q4lo3"]
resource_name = "attack_up"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackPivot/Slash:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_4x6f2"]
resource_name = "idle_forward"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tnrap"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_lgsb6"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4.71239]
}

[sub_resource type="Animation" id="Animation_0sy6g"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.14159]
}

[sub_resource type="Animation" id="Animation_gygrc"]
resource_name = "run_forward"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 2, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5twjd"]
resource_name = "run_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 12, 14, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_tu0g4"]
resource_name = "run_r"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 4, 6, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4.71239]
}

[sub_resource type="Animation" id="Animation_m2c4p"]
resource_name = "run_backward"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 8, 10, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x20bg"]
_data = {
"RESET": SubResource("Animation_8blii"),
"attack_down": SubResource("Animation_6ugtd"),
"attack_left": SubResource("Animation_ndwr5"),
"attack_right": SubResource("Animation_ukxeu"),
"attack_up": SubResource("Animation_q4lo3"),
"idle_down": SubResource("Animation_4x6f2"),
"idle_left": SubResource("Animation_tnrap"),
"idle_right": SubResource("Animation_lgsb6"),
"idle_up": SubResource("Animation_0sy6g"),
"run_down": SubResource("Animation_gygrc"),
"run_left": SubResource("Animation_5twjd"),
"run_right": SubResource("Animation_tu0g4"),
"run_up": SubResource("Animation_m2c4p")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5p104"]
animation = &"attack_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vsfs6"]
animation = &"attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7aw6c"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4vabg"]
animation = &"attack_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_je82s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_5p104")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_vsfs6")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_7aw6c")
blend_point_2/pos = Vector2(-0.2, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_4vabg")
blend_point_3/pos = Vector2(0.2, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_22lcc"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v533r"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_quo0q"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_84d0p"]
animation = &"idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_c0a8d"]
blend_point_0/node = SubResource("AnimationNodeAnimation_22lcc")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_v533r")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_quo0q")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_84d0p")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xjvr7"]
animation = &"run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t1iim"]
animation = &"run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dvclc"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8xy6g"]
animation = &"run_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mxd5o"]
blend_point_0/node = SubResource("AnimationNodeAnimation_xjvr7")
blend_point_0/pos = Vector2(0.2, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_t1iim")
blend_point_1/pos = Vector2(-0.2, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_dvclc")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_8xy6g")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rmdpe"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ssvp0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j767l"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wexbj"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_enakd"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7hrr3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t5w8d"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3pilu"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_je82s")
states/Attack/position = Vector2(561, 87)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_c0a8d")
states/Idle/position = Vector2(382, 369)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_mxd5o")
states/Run/position = Vector2(387, 76)
states/Start/position = Vector2(201, 100)
transitions = ["Idle", "Run", SubResource("AnimationNodeStateMachineTransition_rmdpe"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_ssvp0"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_j767l"), "Attack", "Run", SubResource("AnimationNodeStateMachineTransition_wexbj"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_enakd"), "Run", "Attack", SubResource("AnimationNodeStateMachineTransition_7hrr3"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_t5w8d")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8xqt"]
size = Vector2(16, 16)

[node name="RPGPlayer" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_xuju6")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 1)
zoom = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_hjk8r")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("2_bcgte")
hframes = 4
vframes = 4
frame = 4
region_rect = Rect2(0, 0, 64, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x20bg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_3pilu")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(0.0603528, 0.633962)
parameters/Idle/blend_position = Vector2(0.63318, 0.00255752)
parameters/Run/blend_position = Vector2(-0.949861, 0.027972)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AttackPivot" type="Node2D" parent="."]
rotation = 4.71239

[node name="Slash" type="Sprite2D" parent="AttackPivot"]
z_index = -3
position = Vector2(0, 11)
texture = ExtResource("3_2j0km")
vframes = 4

[node name="Hitbox" type="Area2D" parent="AttackPivot"]
position = Vector2(0, 11)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackPivot/Hitbox"]
shape = SubResource("RectangleShape2D_n8xqt")
disabled = true

[node name="Interact" type="RayCast2D" parent="AttackPivot"]
target_position = Vector2(0, 10)
collision_mask = 16

[node name="DialogueBox" type="Sprite2D" parent="."]
visible = false
z_index = 5
position = Vector2(0, 51)
texture = ExtResource("4_51g28")

[node name="Label" type="Label" parent="DialogueBox"]
offset_left = -153.0
offset_top = -36.0
offset_right = 152.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("5_yirej")
theme_override_font_sizes/font_size = 12
text = "insert cool dialogue here"
autowrap_mode = 2

[node name="InteractSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0if83")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
